-
Bug
-
Resolution: Done
-
P2: Important
-
4.7.3
-
None
-
Win7 x64 Japanese, msvc2008, Qt 4.7.3, OpenSSL 0.9.8n (stock Qt-provided libs)
-
a0debfa0e1d90868e10c28c730a2033a302cde92
Using either sslinfo or the demo browser, www.google.com is reported as having an expired certificate, however this is not true.
C:\Users\bp\qt-examples-qt-examples\sslinfo-build-desktop\debug>sslinfo.exe www.google.com Connecting... SSL Error: "The certificate has expired" === Peer Certificate === "-----BEGIN CERTIFICATE----- MIIDITCCAoqgAwIBAgIQL9+89q6RUm0PmqPfQDQ+mjANBgkqhkiG9w0BAQUFADBM MQswCQYDVQQGEwJaQTElMCMGA1UEChMcVGhhd3RlIENvbnN1bHRpbmcgKFB0eSkg THRkLjEWMBQGA1UEAxMNVGhhd3RlIFNHQyBDQTAeFw0wOTEyMTgwMDAwMDBaFw0x MTEyMTgyMzU5NTlaMGgxCzAJBgNVBAYTAlVTMRMwEQYDVQQIEwpDYWxpZm9ybmlh MRYwFAYDVQQHFA1Nb3VudGFpbiBWaWV3MRMwEQYDVQQKFApHb29nbGUgSW5jMRcw FQYDVQQDFA53d3cuZ29vZ2xlLmNvbTCBnzANBgkqhkiG9w0BAQEFAAOBjQAwgYkC gYEA6PmGD5D6htffvXImttdEAoN4c9kCKO+IRTn7EOh8rqk41XXGOOsKFQebg+jN gtXj9xVoRaELGYW84u+E593y17iYwqG7tcFR39SDAqc9BkJb4SLD3muFXxzW2k6L 05vuuWciKh0R73mkszeK9P4Y/bz5RiNQl/Os/CRGK1w7t0UCAwEAAaOB5zCB5DAM BgNVHRMBAf8EAjAAMDYGA1UdHwQvMC0wK6ApoCeGJWh0dHA6Ly9jcmwudGhhd3Rl LmNvbS9UaGF3dGVTR0NDQS5jcmwwKAYDVR0lBCEwHwYIKwYBBQUHAwEGCCsGAQUF BwMCBglghkgBhvhCBAEwcgYIKwYBBQUHAQEEZjBkMCIGCCsGAQUFBzABhhZodHRw Oi8vb2NzcC50aGF3dGUuY29tMD4GCCsGAQUFBzAChjJodHRwOi8vd3d3LnRoYXd0 ZS5jb20vcmVwb3NpdG9yeS9UaGF3dGVfU0dDX0NBLmNydDANBgkqhkiG9w0BAQUF AAOBgQCfQ89bxFApsb/isJr/aiEdLRLDLE5a+RLizrmCUi3nHX4adpaQedEkUjh5 u2ONgJd8IyAPkU0Wueru9G2Jysa9zCRo1kNbzipYvzwY4OA8Ys+WAi0oR1A04Se6 z5nRUP8pJcA2NhUzUnC+MY+f6H/nEQyNv4SgQhqAibAxWEEHXw== -----END CERTIFICATE----- " == Subject Info = CommonName: "www.google.com" Organization: "Google Inc" LocalityName: "Mountain View" OrganizationalUnitName: "" StateOrProvinceName: "California" == Issuer Info == CommonName: "Thawte SGC CA" Organization: "Thawte Consulting (Pty) Ltd." LocalityName: "" OrganizationalUnitName: "" StateOrProvinceName: "" == Certificate == Effective Date: "金 12 18 00:00:00 2009" Expiry Date: "日 12 18 23:59:59 2011" Valid: Yes == Cipher == Authentication: "RSA" Encryption: "RC4(128)" Key Exchange: "RSA" Cipher Name: "RC4-SHA" Protocol: "SSLv3" Supported Bits: 128 Used Bits: 128 Done
The expiry date is shown with a future date, even though an expiration error is emitted.
- relates to
-
QTBUG-28343 openssl structure layout is binary incompatible between releases
-
- Closed
-
-
QTBUG-19216 SSL: browsing to https://www.petroules.com/ fails in 4.7.3
-
- Closed
-
-
QTBUG-21069 Some SSL certificates fails autentication on Windows 7.
-
- Closed
-
| For Gerrit Dashboard: QTBUG-20012 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 12427,1 | Fix renewed SSL certificates being incorrectly reported as expired | master | qt/qtbase | Status: MERGED | +2 | 0 |